test/Fail/issue5072.err
issue5072.agda:3.3: error: [ParseError]
no-eta-equality<ERROR> 
...
